--- a/index.html
+++ b/index.html
@@ -2,74 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Three.js Single File Example</title>
-    <style>
-      body { margin: 0; overflow: hidden; }
-      canvas { display: block; }
-    </style>
+    <title>Hello World</title>
   </head>
   <body>
-    <!-- Import maps for CDN modules -->
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.170.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.170.0/examples/jsm/"
-        }
-      }
-    </script>
-
-    <script type="module">
-      import * as THREE from 'three';
-      import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-      import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
-
-      // --- Basic Scene Setup ---
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(
-        75,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
-      camera.position.z = 3;
-
-      const renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
-      // --- Geometry ---
-      const geometry = new THREE.BoxGeometry();
-      const material = new THREE.MeshStandardMaterial({ color: 0x44aa88 });
-      const cube = new THREE.Mesh(geometry, material);
-      scene.add(cube);
-
-      // --- Lighting ---
-      const light = new THREE.DirectionalLight(0xffffff, 1);
-      light.position.set(5, 5, 5).normalize();
-      scene.add(light);
-
-      // --- OrbitControls ---
-      const controls = new OrbitControls(camera, renderer.domElement);
-
-      // --- GUI (lil-gui) ---
-      const gui = new GUI();
-      gui.add(cube.rotation, 'x', 0, Math.PI * 2);
-      gui.add(cube.rotation, 'y', 0, Math.PI * 2);
-
-      // --- Animate Loop ---
-      function animate() {
-        requestAnimationFrame(animate);
-        renderer.render(scene, camera);
-      }
-      animate();
-
-      // --- Resize Handling ---
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      });
-    </script>
+    <h1>Hello World</h1>
+    <p>This page is served with GitHub Pages 🎉</p>
   </body>
 </html>
